[package]
name = "start"
version = "0.1.0"
edition = "2024"
description = "Minecraft Launcher with Cloudflared integration"

[[bin]]
name = "MCR-minecraft-launcher"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"